tests/ui/feature-gates/feature-gate-freeze-impls.stderr
error[E0658]: explicit impls for the `Freeze` trait are not permitted
  --> $DIR/feature-gate-freeze-impls.rs:7:1
   |
LL | unsafe impl Freeze for Foo {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ impl of `Freeze` not allowed
   |
   = note: see issue #121675 <https://github.com/rust-lang/rust/issues/121675> for more information
   = help: add `#![feature(freeze_impls)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: explicit impls for the `Freeze` trait are not permitted
  --> $DIR/feature-gate-freeze-impls.rs:12:1
   |
LL | impl !Freeze for Bar {}
   | ^^^^^^^^^^^^^^^^^^^^ impl of `Freeze` not allowed
   |
   = note: see issue #121675 <https://github.com/rust-lang/rust/issues/121675> for more information
   = help: add `#![feature(freeze_impls)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
